<resources>
  <string name="app_name">IM-UI</string>
  <string name="chat_list">CHAT LIST</string>
  <string name="chat_activity">CHAT ACTIVITY</string>
  <string name="loading">Loading&#8230;</string>

  <string name="permission_storage">存储空间</string>
  <string name="permission_audio_record">语音录制</string>
  <string name="permission_request_title">亲爱的上帝</string>
  <string name="permission_desc">为了能够正常使用，请开启这些权限！</string>

  <string name="tap_to_speak">按住说话</string>
  <string name="long_press_to_start_record">长按开始录音</string>
  <string name="release_to_send">松开发送</string>
  <string name="release_to_cancel">松开取消</string>
  <string name="release_to_send_slide_to_cancel">松开发送 上滑取消</string>

  <string name="image">图片</string>
  <string name="short_video">小视频</string>
  <string name="file">文件</string>
  <string name="location">位置</string>
  <string name="recording_time_too_short">录音时间太短</string>


</resources>
